--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -8,6 +8,8 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - LOGGING_LEVEL=DEBUG
+    volumes:
+      - ./server/config.ini:/server/config.ini:ro
     networks:
       - testing_net
 
@@ -20,6 +22,8 @@ services:
       - CLI_LOG_LEVEL=DEBUG
     networks:
       - testing_net
+    volumes:
+      - ./client/config.yaml:/config.yaml:ro
     depends_on:
       - server
 
