--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -5,12 +5,16 @@ services:
     container_name: server
     image: server:latest
     entrypoint: python3 /main.py
+    volumes:
+      - ./bets.csv:/bets.csv
     environment:
       - PYTHONUNBUFFERED=1
       - LOGGING_LEVEL=DEBUG
     networks:
       - testing_net
-
+    ports:
+      - 12345:12345
+  
   client1:
     container_name: client1
     image: client:latest
@@ -18,8 +22,91 @@ services:
     environment:
       - CLI_ID=1
       - CLI_LOG_LEVEL=DEBUG
+      - CLI_NAME=Santiago Lionel
+      - CLI_LASTNAME=Lorca
+      - CLI_IDCARD=30904465
+      - CLI_BIRTHDATE=1999-03-17
+      - CLI_BETNUMBER=7574
     networks:
       - testing_net
+    volumes:
+      - ./client/config.yaml:/config.yaml:ro
+    depends_on:
+      - server
+
+  client2:
+    container_name: client2
+    image: client:latest
+    entrypoint: /client
+    environment:
+      - CLI_ID=2
+      - CLI_LOG_LEVEL=DEBUG
+      - CLI_NAME=Lucho
+      - CLI_LASTNAME=Sport
+      - CLI_IDCARD=12345678
+      - CLI_BIRTHDATE=1996-03-12
+      - CLI_BETNUMBER=3773
+    networks:
+      - testing_net
+    volumes:
+      - ./client/config.yaml:/config.yaml:ro
+    depends_on:
+      - server
+
+  client3:
+    container_name: client3
+    image: client:latest
+    entrypoint: /client
+    environment:
+      - CLI_ID=3
+      - CLI_LOG_LEVEL=DEBUG
+      - CLI_NAME=Taylor
+      - CLI_LASTNAME=Swift
+      - CLI_IDCARD=11112222
+      - CLI_BIRTHDATE=1989-12-13
+      - CLI_BETNUMBER=1989
+    networks:
+      - testing_net
+    volumes:
+      - ./client/config.yaml:/config.yaml:ro
+    depends_on:
+      - server
+
+  client4:
+    container_name: client4
+    image: client:latest
+    entrypoint: /client
+    environment:
+      - CLI_ID=4
+      - CLI_LOG_LEVEL=DEBUG
+      - CLI_NAME=Selena
+      - CLI_LASTNAME=Gomez
+      - CLI_IDCARD=33334444
+      - CLI_BIRTHDATE=1992-07-22
+      - CLI_BETNUMBER=804
+    networks:
+      - testing_net
+    volumes:
+      - ./client/config.yaml:/config.yaml:ro
+    depends_on:
+      - server
+
+  client5:
+    container_name: client5
+    image: client:latest
+    entrypoint: /client
+    environment:
+      - CLI_ID=5
+      - CLI_LOG_LEVEL=DEBUG
+      - CLI_NAME=Olivia
+      - CLI_LASTNAME=Wilde
+      - CLI_IDCARD=55556666
+      - CLI_BIRTHDATE=1984-03-10
+      - CLI_BETNUMBER=13
+    networks:
+      - testing_net
+    volumes:
+      - ./client/config.yaml:/config.yaml:ro
     depends_on:
       - server
 
