--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -28,7 +28,7 @@ services:
       - testing_net
     volumes:
       - ./client/config.yaml:/config.yaml:ro
-      - ./bets-to-send.csv:/batch.csv:ro
+      - ./.data/agency-1.csv:/batch.csv:ro
     depends_on:
       - server
 
@@ -45,10 +45,10 @@ services:
       - testing_net
     volumes:
       - ./client/config.yaml:/config.yaml:ro
-      - ./bets-to-send.csv:/batch.csv:ro
+      - ./.data/agency-2.csv:/batch.csv:ro
     depends_on:
       - server
-      
+
   client3:
     container_name: client3
     image: client:latest
@@ -62,10 +62,10 @@ services:
       - testing_net
     volumes:
       - ./client/config.yaml:/config.yaml:ro
-      - ./bets-to-send.csv:/batch.csv:ro
+      - ./.data/agency-3.csv:/batch.csv:ro
     depends_on:
       - server
-      
+
   client4:
     container_name: client4
     image: client:latest
@@ -79,10 +79,10 @@ services:
       - testing_net
     volumes:
       - ./client/config.yaml:/config.yaml:ro
-      - ./bets-to-send.csv:/batch.csv:ro
+      - ./.data/agency-4.csv:/batch.csv:ro
     depends_on:
       - server
-      
+
   client5:
     container_name: client5
     image: client:latest
@@ -96,10 +96,10 @@ services:
       - testing_net
     volumes:
       - ./client/config.yaml:/config.yaml:ro
-      - ./bets-to-send.csv:/batch.csv:ro
+      - ./.data/agency-5.csv:/batch.csv:ro
     depends_on:
       - server
-      
+
 networks:
   testing_net:
     ipam:
